# Automata

./: .env.example  .gitignore  CLI_GUIDE.md  GUI_GUIDE.md  LICENSE  MICRO_AGENTS_README.md  README.md  README_ARCHITECTURE.md  app.py  automate  cli.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_integration_test.py  run_memory_tests.sh  run_simple_navigation_test.py  start_gui.sh  test_action_loop_fix.py  test_all_shapes_sizes.py  test_click_precision.py  test_coordinate_accuracy.py  test_cursor.py  test_dag_memory.py  test_dom_enrichment.py  test_each_component.sh  test_element_formatter.py  test_element_id_actions.py  test_gemini_memory.py  test_image_memory.py  test_isolation.py  test_memory_simple.py  test_mock_properly.py  test_ocr_comparison.py  test_popup_detection.py  test_popup_form_complete.py  test_qwen_browser.py  test_qwen_ocr.py  test_ram_diagnostic.py  (+8 more)
OmniParser/: DETECTOR_MODELS.md  MODEL_COMPARISON.md  TRAINING_GUIDE.md  gradio_demo.py
OmniParser/dataset_generator/: =8.0.0  COMPLETE_SUMMARY.md  COMPREHENSIVE_COMPONENTS.md  GENERATE_AND_TRAIN.sh  README.md  README_FINAL.md  TRAINING_INSTRUCTIONS.md  complete_templates.py  dataset_generator_direct.py  direct_image_generator.py  final_pipeline_test.py  fixed_webpage_generator.py  generate_full_dataset.py  iterative_training_loop.py  train_yolo.py  (+8 more)
examples/: data_extraction.py  examples.py  form_filling.py  quick_start.py  simple_search.py  unified_agent.py
scripts/: make_executable.sh  migrate_to_src_layout.py  run_all_tests.py  update_imports.py  verify_setup.py
tests/: conftest.py
(+14527 files in other folders)
